# modelFineTuneRiskAssessment

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  mkdocs.yml  pages.yml  publish.yml
docs/: CITATIONS.md  MATH.md  PUBLISHING.md  SOURCES.md  _config.yml  index.md
docs/javascripts/: mathjax.js
examples/: synthetic_run.py
scripts/: setup_macos_apple_silicon.sh
src/alignment_risk/: __about__.py  __init__.py  cli.py  curvature.py  demo.py  fisher.py  forecast.py  mitigation.py  orthogonality.py  pipeline.py  types.py  utils.py  visualization.py
tests/: test_cli.py  test_curvature.py  test_device.py  test_fisher_options.py  test_fisher_precision.py  test_forecast.py  test_mitigation.py  test_modes.py  test_orthogonality.py  test_pipeline_run.py  test_utils_batch.py
