[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alignment-risk"
version = "1.14.1"
description = "Template toolkit for AIC-based alignment collapse diagnostics"
readme = "README.md"
authors = [{name = "Mohammed Talat"}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.13"
keywords = ["alignment", "llm", "safety", "fine-tuning", "risk", "fisher"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.3,<2.7",
  "numpy>=1.24,<3.0",
  "matplotlib>=3.8,<3.11",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2.0",
  "twine>=6.0,<7.0",
  "pytest>=8.0,<9.0",
  "pytest-xdist>=3.6,<4.0",
  "ruff>=0.8,<1.0",
  "mypy>=1.11,<2.0",
  "mkdocs>=1.6,<2.0",
  "mkdocs-material>=9.6,<10.0",
  "pymdown-extensions>=10.0,<11.0",
]

[project.scripts]
alignment-risk = "alignment_risk.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
alignment_risk = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
